Modules, Basic Debug Sprites

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <canvas>
-
-    </canvas>
+    <canvas id="game-window" width="640" height="360"></canvas>
+    <script type="module" src="Assets\Scripts\Game.js"></script>
 </body>
 </html>
