--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <canvas id="game-window" width="1280" height="720"></canvas>
+    <vertical-holder>
+        <canvas id="game-window" width="1280" height="720"></canvas>
+        <canvas id="collision-window" width="1280" height="720"></canvas>
+    </vertical-holder>
     <script type="module" src="Assets\Scripts\Game.js"></script>
 </body>
 </html>
